--- a/api/.env.example
+++ b/api/.env.example
@@ -1,3 +1,5 @@
-GITHUB_CLIENT_SECRET=
-GITHUB_CLIENT_ID=
-ACCESS_TOKEN_SECRET=
+GITHUB_CLIENT_SECRET=69fcf10ba082b9d6c0ea94e8f501300307f53d3c
+GITHUB_CLIENT_ID=be0b533ebb9ba90f873c298b81ddde43c6a392a0
+ACCESS_TOKEN_SECRET=awdoawkdpo
+NEXT_PUBLIC_BACKEND_URL=https://bots-market.herokuapp.com
+SERVER_API_KEY=qwerty-9f35-4abd-ac2a-fc378e83a60e
